<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_margin="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/pretendard_bold"
            android:id="@+id/title"
            android:textSize="25dp"
            android:text="@string/switch_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <TextView
            android:textSize="16dp"
            android:fontFamily="@font/pretendard_medium"
            android:text="@string/notion"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <ListView
            android:id="@+id/lv"
            android:layout_width="match_parent"
            android:layout_height="300dp"/>
        <Button
            android:id="@+id/btn_cancel"
            android:textSize="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="10dp"
            android:fontFamily="@font/pretendard_medium"
            android:layout_marginTop="10dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_text"
            android:backgroundTint="@color/icon_back"
            android:text="@string/cancel"
            android:layout_width="200dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</androidx.cardview.widget.CardView>