<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".mainactivity.DeleteActivity">

    <ImageView
        android:paddingLeft="14dp"
        android:id="@+id/btn_back"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="@id/tv_tabName"
        app:layout_constraintBottom_toBottomOf="@id/tv_tabName"
        android:src="@drawable/baseline_keyboard_backspace_24"
        android:layout_width="35dp"
        android:layout_height="35dp"/>


    <TextView
        android:layout_marginTop="10dp"
        android:id="@+id/tv_tabName"
        android:fontFamily="@font/pretendard_medium"
        android:textSize="24dp"
        android:layout_marginLeft="14dp"
        app:layout_constraintLeft_toRightOf="@id/btn_back"
        app:layout_constraintTop_toTopOf="parent"
        android:text="here is Tab Name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <TextView
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:id="@+id/notion"
        android:textColor="@color/main_icon_color"
        android:fontFamily="@font/pretendard_thin"
        android:gravity="center"
        android:layout_marginTop="10dp"
        android:textSize="20dp"
        app:layout_constraintTop_toBottomOf="@id/tv_tabName"
        android:text="@string/del_notion"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <CheckBox
        android:id="@+id/cb_select_all"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="14dp"
        android:text="@string/select_all"
        app:layout_constraintTop_toBottomOf="@id/notion"
        app:layout_constraintLeft_toLeftOf="parent"
      />


    <ListView
        android:id="@+id/lv_del"
        android:layout_marginBottom="5dp"
        app:layout_constraintBottom_toTopOf="@id/b_line"
        android:layout_marginRight="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="5dp"
        app:layout_constraintTop_toBottomOf="@id/cb_select_all"
        android:layout_width="match_parent"
        android:layout_height="0dp"/>


    <TextView
        android:id="@+id/b_line"
        app:layout_constraintBottom_toTopOf="@id/lay_bottom"
        android:background="@color/main_icon_color"
        android:layout_width="match_parent"
        android:layout_height="1dp"/>

    <LinearLayout
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:id="@+id/lay_bottom"
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/pretendard_medium"
            android:gravity="center"
            android:text="@string/del"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

        <TextView
            android:layout_marginBottom="5dp"
            android:layout_marginTop="5dp"
            android:background="@color/main_icon_color"
            android:layout_width="1dp"
            android:layout_height="match_parent"/>

        <TextView
            android:paddingTop="10dp"
            android:paddingBottom="10dp"
            android:fontFamily="@font/pretendard_medium"
            android:textColor="@color/main_icon_color"
            android:gravity="center"
            android:text="@string/cancel"
            android:textSize="20dp"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"/>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>