<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:cardCornerRadius="10dp"
    android:elevation="10dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_margin="14dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:fontFamily="@font/pretendard_bold"
            android:id="@+id/title"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            android:textSize="25dp"
            android:text="@string/add_tab"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:textSize="20dp"
            android:id="@+id/et_text"
            android:padding="10dp"
            android:hint="목록1"
            android:fontFamily="@font/pretendard_medium"
            android:layout_marginTop="10dp"
            android:background="@drawable/edit_text_back"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:paddingTop="5dp"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintTop_toBottomOf="@id/et_text"
            android:layout_width="0dp"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/btn_addTab"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                android:layout_weight="1"
                android:backgroundTint="@color/side_color"
                android:fontFamily="@font/pretendard_medium"
                android:text="@string/add"
                android:textSize="20dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_text" />

            <Button
                android:id="@+id/btn_cancel"
                android:textSize="20dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/pretendard_medium"
                android:layout_marginTop="10dp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/et_text"
                android:backgroundTint="@color/icon_back"
                android:text="@string/cancel"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"/>
        </LinearLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>


</androidx.cardview.widget.CardView>